java 7, 8, 14, 21 migration aids