@@ -20,7 +20,7 @@ public class BlockState {
 
     public BlockState(Block blockIn, IProperty... properties) {
         block = blockIn;
-        Arrays.sort(properties, (p_compare_1_, p_compare_2_) -> p_compare_1_.getName().compareTo(p_compare_2_.getName()));
+        Arrays.sort(properties, Comparator.comparing(IProperty::getName));
         this.properties = ImmutableList.copyOf(properties);
         Map<Map<IProperty, Comparable>, BlockState.StateImplementation> map = Maps.newLinkedHashMap();
         List<BlockState.StateImplementation> list = Lists.newArrayList();
@@ -54,7 +54,7 @@ public class BlockState {
     }
 
     public IBlockState getBaseState() {
-        return validStates.get(0);
+        return validStates.getFirst();
     }
 
     public Block getBlock() {
