@@ -893,7 +893,7 @@ public abstract class EntityLiving extends EntityLivingBase {
             } else if (world.playerEntities.size() != 1) {
                 return false;
             } else {
-                Entity entity = world.playerEntities.get(0);
+                Entity entity = world.playerEntities.getFirst();
                 double d0 = Math.max(Math.abs(posX - entity.posX) - 16.0D, 0.0D);
                 double d1 = Math.max(Math.abs(posZ - entity.posZ) - 16.0D, 0.0D);
                 double d2 = d0 * d0 + d1 * d1;
