@@ -119,7 +119,7 @@ public class EntityAIMoveThroughVillage extends EntityAIBase {
 
     private void resizeDoorList() {
         if (doorList.size() > 15) {
-            doorList.remove(0);
+            doorList.removeFirst();
         }
     }
 }
