@@ -208,7 +208,7 @@ public class EntityPlayerMP extends EntityPlayer implements ICrafting {
 
             if (!list.isEmpty()) {
                 if (list.size() == 1) {
-                    playerNetServerHandler.sendPacket(new S21PacketChunkData(list.get(0), true, 65535));
+                    playerNetServerHandler.sendPacket(new S21PacketChunkData(list.getFirst(), true, 65535));
                 } else {
                     playerNetServerHandler.sendPacket(new S26PacketMapChunkBulk(list));
                 }
