@@ -171,7 +171,7 @@ public class ItemPotion extends Item {
             List<PotionEffect> list = Items.potionitem.getEffects(stack);
 
             if (list != null && !list.isEmpty()) {
-                String s2 = list.get(0).getEffectName();
+                String s2 = list.getFirst().getEffectName();
                 s2 = s2 + ".postfix";
                 return s + StatCollector.translateToLocal(s2).trim();
             } else {
