@@ -23,7 +23,7 @@ public class ChatComponentProcessor {
                         throw new EntityNotFoundException();
                     }
 
-                    s = list.get(0).getName();
+                    s = list.getFirst().getName();
                 }
 
                 ichatcomponent = entityIn != null && s.equals("*") ? new ChatComponentScore(entityIn.getName(), chatcomponentscore.getObjective()) : new ChatComponentScore(s, chatcomponentscore.getObjective());
