@@ -142,7 +142,7 @@ public final class SpawnerAnimals {
             EntityPlayer entityplayer = null;
 
             if (worldServerIn.playerEntities.size() == 1) {
-                entityplayer = worldServerIn.playerEntities.get(0);
+                entityplayer = worldServerIn.playerEntities.getFirst();
 
                 if (!eligibleChunksForSpawning.isEmpty() && entityplayer != null
                         && entityplayer.chunkCoordX == lastPlayerChunkX
