@@ -105,7 +105,7 @@ public class MapGenStronghold extends MapGenStructure {
     protected StructureStart getStructureStart(int chunkX, int chunkZ) {
         MapGenStronghold.Start mapgenstronghold$start;
 
-        for (mapgenstronghold$start = new MapGenStronghold.Start(worldObj, rand, chunkX, chunkZ); mapgenstronghold$start.getComponents().isEmpty() || ((StructureStrongholdPieces.Stairs2) mapgenstronghold$start.getComponents().get(0)).strongholdPortalRoom == null; mapgenstronghold$start = new MapGenStronghold.Start(worldObj, rand, chunkX, chunkZ)) {
+        for (mapgenstronghold$start = new MapGenStronghold.Start(worldObj, rand, chunkX, chunkZ); mapgenstronghold$start.getComponents().isEmpty() || ((StructureStrongholdPieces.Stairs2) mapgenstronghold$start.getComponents().getFirst()).strongholdPortalRoom == null; mapgenstronghold$start = new MapGenStronghold.Start(worldObj, rand, chunkX, chunkZ)) {
         }
 
         return mapgenstronghold$start;
